[metadata]
name = convert_fgd_dem
version = attr: convert_fgd_dem.__version__
url = https://github.com/MIERUNE/convert_fgd_dem
author = MIERUNE.Inc
author_email = info@mierune.co.jp
license_file = LICENSE
description = Converting DEM (xml) of Fundamental Geospatial Data into GeoTiff and Terrain RGB.
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires =
  numpy