[metadata]
name = convert_fgd_dem
version = 1.0.0
url = https://github.com/MIERUNE/convert_fgd_dem
author = MIERUNE.Inc
author_email = info@mierune.co.jp
license_file = LICENSE
description = Converting DEM (xml) of Fundamental Geospatial Data into GeoTiff and Terrain RGB.
long_description = file: README.md

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
  numpy>=1.20.1
  GDAL>=3.2.1

[options.packages.find]
where = src
include = convert_fgd_dem
